[RED] Add tests for Course Controller